--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "simulate:help": "node test-simulation.js"
   },
   "dependencies": {
-    "better-sqlite3": "^11.7.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "pg": "^8.17.2",
     "qrcode": "^1.5.4",
     "socket.io": "^4.7.2"
   },
